Fixed autocomplete z-index property

--- a/css/autocomplete.css
+++ b/css/autocomplete.css
@@ -8,6 +8,7 @@
     -moz-box-shadow: 0 5px 10px rgba(0,0,0,.2);
     box-shadow: 0 5px 10px rgba(0,0,0,.2);
     width: 100%;
+    z-index: 999;
 }
 
 .ngTagsInput .autocomplete ul.suggestions {
